# identity

./: Cargo.toml  README.md
rules/: cancel.lisp  expand.lisp  reduce.lisp  simplify.lisp  trigexpand.lisp  trigpyth.lisp  trigreducequot.lisp  trigreducerecip.lisp
src/: expression.rs  main.rs  rewrite.rs  solve.rs  text.rs
src/expression/: multiset.rs
src/rewrite/: pattern.rs  replace.rs
src/text/: lisp.rs
