[package]
name = "identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
elsa = { version = "1.7.0", features = ["indexmap"] }
petgraph = "0.6.2"
